force-app/main/default/objects/RV_Valve_Structure_Details__c/RV_Valve_Structure_Details__c.object-meta.xml
<CustomObject>
    <label>RV Valve_Structure Details</label>
    <nameField>
        <label>RV Valve_Structure Details</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RV Valve_Structure Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>