force-app/main/default/objects/RV_Valve_Structure_Details__c/fields/ItemNo__c.field-meta.xml
<CustomField>
    <fullName>ItemNo__c</fullName>
    <label>ItemNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>