force-app/main/default/objects/RV_Valve_Structure_Details__c/fields/Text11Val__c.field-meta.xml
<CustomField>
    <fullName>Text11Val__c</fullName>
    <label>Text11Val</label>
    <length>255</length>
    <type>Text</type>
</CustomField>