force-app/main/default/objects/RV_Valve_Structure_Details__c/fields/Text12Val__c.field-meta.xml
<CustomField>
    <fullName>Text12Val__c</fullName>
    <label>Text12Val</label>
    <length>255</length>
    <type>Text</type>
</CustomField>