force-app/main/default/objects/RV_Valve_Structure_Details__c/fields/Text16Val__c.field-meta.xml
<CustomField>
    <fullName>Text16Val__c</fullName>
    <label>Text16Val</label>
    <length>255</length>
    <type>Text</type>
</CustomField>